tests/ui/suggestions/dont-suggest-ufcs-for-const.rs
fn main() {
    1_u32.MAX();
    //~^ ERROR no method named `MAX` found for type `u32` in the current scope
}
